// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlists container should display all playlists 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="playlists_container"
    >
      <div
        class="playlists_header_container"
      >
        <div
          class="header_container"
        >
          Your playlists
        </div>
        <div
          class="playlist_header_buttons"
        >
          <button
            class="ui basic button nuclear button"
            data-testid="create-new"
          >
            <i
              aria-hidden="true"
              class="plus icon"
            />
            Create new playlist
          </button>
          <button
            class="ui basic button nuclear button"
            data-testid="import-from-url"
          >
            <i
              aria-hidden="true"
              class="spotify icon"
            />
            Import from url (Spotify)
          </button>
          <button
            class="ui basic button nuclear button"
            data-testid="import-from-file"
          >
            <i
              aria-hidden="true"
              class="file text icon"
            />
            Import from file (JSON)
          </button>
        </div>
      </div>
      <table
        class="playlists_table"
        role="table"
      >
        <tbody
          data-rbd-droppable-context-id="0"
          data-rbd-droppable-id="playlists"
          role="rowgroup"
        >
          <tr
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class=""
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="test playlist  0"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="test playlist  0"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <td
              class="thumbnail_cell narrow"
              role="cell"
            >
              <img
                class="thumbnail"
                src="test thumbnail"
              />
            </td>
            <td
              class="title_cell"
              role="cell"
            >
              test playlist
            </td>
            <td
              role="cell"
            >
              2 tracks
            </td>
          </tr>
          <tr
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class=""
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="test playlist 2  1"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="test playlist 2  1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <td
              class="thumbnail_cell narrow"
              role="cell"
            >
              <img
                class="thumbnail"
                src="test thumbnail"
              />
            </td>
            <td
              class="title_cell"
              role="cell"
            >
              test playlist 2
            </td>
            <td
              role="cell"
            >
              2 tracks
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Playlists container should display empty playlists view 1`] = `
<DocumentFragment>
  <div
    class="main_layout_container"
  >
    <div
      class="playlists_container"
    >
      <div
        class="playlists_header_container"
      >
        <span />
        <div
          class="playlist_header_buttons"
        >
          <button
            class="ui basic button nuclear button"
            data-testid="create-new"
          >
            <i
              aria-hidden="true"
              class="plus icon"
            />
            Create new playlist
          </button>
          <button
            class="ui basic button nuclear button"
            data-testid="import-from-url"
          >
            <i
              aria-hidden="true"
              class="spotify icon"
            />
            Import from url (Spotify)
          </button>
          <button
            class="ui basic button nuclear button"
            data-testid="import-from-file"
          >
            <i
              aria-hidden="true"
              class="file text icon"
            />
            Import from file (JSON)
          </button>
        </div>
      </div>
      <div
        class="empty_state"
      >
        <i
          class="icons"
        >
          <i
            aria-hidden="true"
            class="list alternate outline icon"
          />
        </i>
        <h2>
          No playlists.
        </h2>
        <div>
          Try to create some playlists or import by url and they will appear here!
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Playlists container should load webview after clicking on Import from url (Spotify) 1`] = `
<webview
  class="spotify_import_webview"
  data-testid="spotify-playlist-importer-webview"
  src="https://open.spotify.com/playlist/37i9dQZF1EtkaNAuJY7Tph"
  useragent="Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.175 Safari/537.36"
  webpreferences="nodeIntegration=yes,javascript=yes,contextIsolation=no"
/>
`;
